--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -9,13 +9,13 @@
         android:title="Profile" />
 
     <item
-        android:id="@+id/miStarred"
-        android:icon="@drawable/ic_star"
-        android:title="Starred" />
-
-    <item
         android:id="@+id/miChooseTheme"
         android:icon="@drawable/ic_theme"
         android:title="Choose Theme" />
+
+    <item
+        android:id="@+id/miLogOut"
+        android:icon="@drawable/ic_logout"
+        android:title="Log Out" />
 
 </menu>
