--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -18,14 +18,14 @@
         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/ic_trophy" />
+            android:src="@drawable/ic_fundoo_logo" />
 
         <TextView
             android:id="@+id/tvEmail"
             style="@style/TextAppearance.Material3.BodyLarge"
+            android:layout_marginTop="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             tools:text="xyz@gmail.com"
             android:textColor="@color/md_theme_onPrimary" />
 
